<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>
        <item
           android:id="@+id/menu_sort_popular"
            android:orderInCategory="1"
            android:title="@string/menu_sort_popular"
            app:showAsAction="collapseActionView"/>
        <item
            android:orderInCategory="2"
            android:id="@+id/menu_sort_top_rated"
            android:title="@string/menu_sort_top_rated"
            app:showAsAction="collapseActionView"/>
        <item
            android:orderInCategory="3"
            android:id="@+id/menu_show_favorites"
            android:title="@string/menu_show_favorites"
            app:showAsAction="collapseActionView"/>

    </group>
</menu>